Fix a problem with creating board column and fix the horizontal scrolling

--- a/client/src/pages/Board/index.css
+++ b/client/src/pages/Board/index.css
@@ -1,10 +1,14 @@
 .board-column {
   width: 18vw;
   background-color: #f6f5f2;
+  flex: 0 0 auto;
 }
 
 #board-container {
   height: 100%;
+  display: flex;
+  overflow-x: auto;
+  width: 73vw;
 }
 
 .column-issue {
